--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,13 +6,17 @@ import Footer from "@components/footer.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
+import Services from "@components/services.astro";
+import Testimonials from "@components/testimonials.astro";
 ---
 
 <Layout title="">
   <Container>
     <Hero />
     <Features />
-    <Logos />
+    <!-- <Logos /> -->
+    <Services />
+    <Testimonials />
     <Cta />
   </Container>
 </Layout>
