--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -14,6 +14,10 @@ import Button from "./ui/button.astro";
   <!-- Create your free access key from https://web3forms.com/ -->
   <input type="checkbox" class="hidden" style="display:none" name="botcheck" />
   <div class="mb-5">
+    <label
+      class="font-semibold inline-block rounded text-slate-600 last:mr-0 mr-1 mb-4"
+      >Name</label
+    >
     <input
       type="text"
       placeholder="Full Name"
@@ -26,6 +30,10 @@ import Button from "./ui/button.astro";
     </div>
   </div>
   <div class="mb-5">
+    <label
+      class="font-semibold inline-block rounded text-slate-600 last:mr-0 mr-1 mb-4"
+      >Email</label
+    >
     <label for="email_address" class="sr-only">Email Address</label><input
       id="email_address"
       type="email"
@@ -41,11 +49,66 @@ import Button from "./ui/button.astro";
       Please provide a valid email address.
     </div>
   </div>
+
+  <!-- phone -->
+  <div class="mb-5">
+    <label
+      class="font-semibold inline-block rounded text-slate-600 last:mr-0 mr-1 mb-4"
+      >Phone Number</label
+    >
+    <input
+      type="tel"
+      placeholder="Phone Number"
+      required
+      class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
+      name="phone"
+    />
+    <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
+      Please provide your phone number.
+    </div>
+  </div>
+  <!-- date -->
+  <div class="mb-5">
+    <label
+      class="font-semibold inline-block rounded text-slate-600 last:mr-0 mr-1 mb-4"
+      >Preferred Date of Appointment (optional)</label
+    >
+    <input
+      type="date"
+      placeholder="Date"
+      class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
+      name="date"
+    />
+    <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
+      Please provide a date.
+    </div>
+  </div>
+  <!-- time -->
+  <div class="mb-5">
+    <label
+      class="font-semibold inline-block rounded text-slate-600 last:mr-0 mr-1 mb-4"
+      >Preferred Time of Appointment (optional)</label
+    >
+    <input
+      type="time"
+      placeholder="Time"
+      class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
+      name="time"
+    />
+    <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
+      Please provide your full name.
+    </div>
+  </div>
+
   <div class="mb-3">
+    <label
+      class="font-semibold inline-block rounded text-slate-600 last:mr-0 mr-1 mb-4"
+      >Tell us about your project</label
+    >
     <textarea
       name="message"
       required
-      placeholder="Your Message"
+      placeholder=""
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none h-36 focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
     ></textarea>
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
@@ -77,51 +140,51 @@ import Button from "./ui/button.astro";
 </style>
 
 <script is:inline>
-  const form = document.getElementById("form");
-  const result = document.getElementById("result");
+const form = document.getElementById("form");
+const result = document.getElementById("result");
 
-  form.addEventListener("submit", function (e) {
-    e.preventDefault();
-    form.classList.add("was-validated");
-    if (!form.checkValidity()) {
-      form.querySelectorAll(":invalid")[0].focus();
-      return;
-    }
-    const formData = new FormData(form);
-    const object = Object.fromEntries(formData);
-    const json = JSON.stringify(object);
+form.addEventListener("submit", function (e) {
+  e.preventDefault();
+  form.classList.add("was-validated");
+  if (!form.checkValidity()) {
+    form.querySelectorAll(":invalid")[0].focus();
+    return;
+  }
+  const formData = new FormData(form);
+  const object = Object.fromEntries(formData);
+  const json = JSON.stringify(object);
 
-    result.innerHTML = "Sending...";
+  result.innerHTML = "Sending...";
 
-    fetch("https://api.web3forms.com/submit", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-        Accept: "application/json",
-      },
-      body: json,
+  fetch("https://api.web3forms.com/submit", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+      Accept: "application/json",
+    },
+    body: json,
+  })
+    .then(async (response) => {
+      let json = await response.json();
+      if (response.status == 200) {
+        result.classList.add("text-green-500");
+        result.innerHTML = json.message;
+      } else {
+        console.log(response);
+        result.classList.add("text-red-500");
+        result.innerHTML = json.message;
+      }
     })
-      .then(async (response) => {
-        let json = await response.json();
-        if (response.status == 200) {
-          result.classList.add("text-green-500");
-          result.innerHTML = json.message;
-        } else {
-          console.log(response);
-          result.classList.add("text-red-500");
-          result.innerHTML = json.message;
-        }
-      })
-      .catch((error) => {
-        console.log(error);
-        result.innerHTML = "Something went wrong!";
-      })
-      .then(function () {
-        form.reset();
-        form.classList.remove("was-validated");
-        setTimeout(() => {
-          result.style.display = "none";
-        }, 5000);
-      });
-  });
+    .catch((error) => {
+      console.log(error);
+      result.innerHTML = "Something went wrong!";
+    })
+    .then(function () {
+      form.reset();
+      form.classList.remove("was-validated");
+      setTimeout(() => {
+        result.style.display = "none";
+      }, 5000);
+    });
+});
 </script>
