--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -1,69 +1,71 @@
 ---
 // @ts-ignore
-import { Icon } from "astro-icon";
+import Check from "/check.svg";
 
 const features = [
   {
-    title: "Bring Your Own Framework",
+    img: "/check.svg",
+    size: "width: 35px; height: 35px",
+    title: "100% Recommended",
     description:
       "Build your site using React, Svelte, Vue, Preact, web components, or just plain ol' HTML + JavaScript.",
-    icon: "bx:bxs-briefcase",
   },
   {
-    title: "100% Static HTML, No JS",
+    img: "/star.svg",
+    size: "width: 35px; height: 35px",
+    title: "16 Years in Business",
     description:
       "Astro renders your entire page to static HTML, removing all JavaScript from your final build by default.",
-    icon: "bx:bxs-window-alt",
   },
   {
-    title: "On-Demand Components",
-    description:
-      "Need some JS? Astro can automatically hydrate interactive components when they become visible on the page.  ",
-    icon: "bx:bxs-data",
+    img: "/homeadvisor.png",
+    size: "width: 35px; height: 35px",
+    title: "HomeAdvisor Screened and Approved",
+    description: "",
   },
   {
-    title: "Broad Integration",
-    description:
-      "Astro supports TypeScript, Scoped CSS, CSS Modules, Sass, Tailwind, Markdown, MDX, and any other npm packages.",
-    icon: "bx:bxs-bot",
+    img: "/bzscore.png",
+    size: "width: 35px; height: 35px",
+    title: "112 BuildZoom Score",
+    description: "97th Percentile above other contractors in California",
   },
   {
-    title: "SEO Enabled",
-    description:
-      "Automatic sitemaps, RSS feeds, pagination and collections take the pain out of SEO and syndication. It just works!",
-    icon: "bx:bxs-file-find",
+    img: "/paper.svg",
+    size: "width: 30px; height: 30px",
+    title: "127 Permitted Projects",
+    description: "97th Percentile above other contractors in California",
   },
   {
-    title: "Community",
-    description:
-      "Astro is an open source project powered by hundreds of contributors making thousands of individual contributions.",
-    icon: "bx:bxs-user",
+    img: "/verified.png",
+    size: "width: 45x; height: 35px",
+    title: "Verified License",
+    description: "See our license info",
   },
 ];
 ---
 
-<div class="mt-16 md:mt-0">
-  <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
-    Everything you need to start a website
-  </h2>
-  <p class="text-lg mt-4 text-slate-600">
-    Astro comes batteries included. It takes the best parts of state-of-the-art
-    tools and adds its own innovations.
-  </p>
-</div>
-
-<div class="grid sm:grid-cols-2 md:grid-cols-3 mt-16 gap-16">
+<!-- <div class="flex flex-col gap-3 mx-auto max-w-4xl m-16 text-center">
+  <h2 class="font-bold text-3xl text-gray-800">Why Us</h2>
+</div> -->
+<div class="grid sm:grid-cols-1 md:grid-cols-3 auto-rows-fr p-4 gap-4">
   {
     features.map((item) => (
-      <div class="flex gap-4 items-start">
-        <div class="mt-1 bg-black rounded-full  p-2 w-8 h-8 shrink-0">
-          <Icon class="text-white" name={item.icon} />
+      <>
+        <div class="flex border p-4 rounded-lg shadow-sm hover:shadow-slate-300 transition">
+          <div class="flex gap-4 items-start">
+            <div>
+              <div class="flex items-center">
+                <img src={item.img} class="mr-2" style={item.size} />
+                <h3 class="font-semibold text-lg">{item.title}</h3>{" "}
+              </div>
+
+              <p class="text-slate-500 mt-2 leading-relaxed">
+                {item.description}
+              </p>
+            </div>
+          </div>
         </div>
-        <div>
-          <h3 class="font-semibold text-lg">{item.title}</h3>{" "}
-          <p class="text-slate-500 mt-2 leading-relaxed">{item.description}</p>
-        </div>
-      </div>
+      </>
     ))
   }
 </div>
