--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -23,9 +23,11 @@ const sizes = {
 };
 
 const styles = {
-  outline: "bg-white border-2 border-black hover:bg-gray-100 text-black ",
-  primary: "bg-black text-white hover:bg-gray-800  border-2 border-transparent",
-  inverted: "bg-white text-black   border-2 border-transparent",
+  outline:
+    "bg-transparent border-2 border-white-800 hover:bg-gray-400 hover:bg-opacity-50 text-white ",
+  primary:
+    "bg-gray-900 text-white hover:bg-gray-800  border-2 border-transparent",
+  inverted: "bg-white text-gray-800  border-2 border-transparent",
   muted: "bg-gray-100 hover:bg-gray-200   border-2 border-transparent",
 };
 ---
