--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,32 +5,27 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 
-// Filter blog entries with 'draft: false' & date before current date
-const publishedBlogEntries = await getCollection("blog", ({ data }) => {
-  return !data.draft && data.publishDate < new Date();
-});
-
-// Sort content entries by publication date
-publishedBlogEntries.sort(function (a, b) {
-  return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
+const publishedBlogEntries = await getCollection("photos", ({ data }) => {
+  return data;
 });
 ---
 
-<Layout title="Blog">
+<Layout title="Projects">
   <Container>
     <Sectionhead>
-      <Fragment slot="title">Our Blog</Fragment>
+      <Fragment slot="title">Recent Projects</Fragment>
       <Fragment slot="desc">
-        We write about building startups and thoughts going on our mind.
+        A collection of images from our most recent work.
       </Fragment>
     </Sectionhead>
-    <main class="mt-16">
-      <ul class="grid gap-16 max-w-4xl mx-auto">
+    <main class="mt-16 px-5">
+      <ul
+        class="grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 gap-16 max-w-4xl mx-auto">
         {
           publishedBlogEntries.map((blogPostEntry, index) => (
             <li>
-              <a href={`/blog/${blogPostEntry.slug}`}>
-                <div class="grid md:grid-cols-2 gap-5 md:gap-10 items-center">
+              <a href={`/projects/${blogPostEntry.slug}`}>
+                <div class="grid md:grid-cols-1 gap-5 md:gap-10 items-center hover:scale-105 transition shadow-sm p-4">
                   <Picture
                     src={blogPostEntry.data.image.src}
                     alt={blogPostEntry.data.image.alt}
@@ -45,25 +40,13 @@ publishedBlogEntries.sort(function (a, b) {
                     class="w-full rounded-md"
                   />
                   <div>
-                    <span class="text-blue-400 uppercase tracking-wider text-sm font-medium">
+                    <span class="text-slate-400 uppercase tracking-wider text-sm font-medium">
                       {blogPostEntry.data.category}
                     </span>
 
                     <h2 class="text-3xl font-semibold leading-snug tracking-tight mt-1 ">
                       {blogPostEntry.data.title}
                     </h2>
-
-                    <div class="flex gap-2 mt-3">
-                      <span class="text-gray-400">
-                        {blogPostEntry.data.author}
-                      </span>
-                      <span class="text-gray-400">• </span>
-                      <time
-                        class="text-gray-400"
-                        datetime={blogPostEntry.data.publishDate.toISOString()}>
-                        {blogPostEntry.data.publishDate.toDateString()}
-                      </time>
-                    </div>
                   </div>
                 </div>
               </a>
