added more animations and licenses component

--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -1,4 +1,5 @@
 ---
+import Licenses from "./licenses.astro";
 import Link from "./ui/link.astro";
 import Contactform from "@components/contactform.astro";
 ---
