--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,3 +35,9 @@ import Link from "@components/ui/link.astro";
     <Cta />
   </Container>
 </Layout>
+
+<style>
+  html {
+    scroll-behavior: smooth;
+  }
+</style>
