--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,24 +2,64 @@
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
+import Licenses from "@components/licenses.astro";
+import Check from "/check.svg";
+import Button from "@components/ui/button.astro";
 ---
 
 <Layout title="About">
   <Container>
     <Sectionhead>
       <Fragment slot="title">About</Fragment>
-      <Fragment slot="desc">We are a small passionate team.</Fragment>
+      <Fragment slot="desc"></Fragment>
     </Sectionhead>
 
-    <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16 px-5">
-      <h2 class="font-bold text-3xl text-gray-800">
-        Empowering the world with Astro.
-      </h2>
-      <p class="text-lg leading-relaxed text-slate-500">
-        We're a multi-cultural team from around the world! We come from diverse
-        backgrounds, bringing different personalities, experiences and skills to
-        the job. This is what makes our team so special.
-      </p>
+    <div class="grid md:grid-cols-3 gap-8 mx-auto max-w-4xl mt-16 px-5">
+      <div class="col-span-2">
+        <h2 class="font-bold text-3xl text-gray-800">Meet us</h2>
+        <p class="text-lg leading-relaxed text-slate-500">
+          Welcome to California Design Solutions - Your Trusted Home Improvement
+          Specialists. Since 2007, we have been locally owned and operated,
+          providing top-notch contracting services to our valued clients. With
+          over 16 years of industry experience, we have honed our skills to
+          deliver exceptional results in Additions, Kitchen Remodels, and a wide
+          range of Home Improvement projects. Our commitment to quality
+          workmanship, combined with our dedication to customer satisfaction,
+          sets us apart as the go-to choice for all your renovation needs.
+        </p>
+        <img class="my-4 rounded" src="../../public/unsplash/k.jpg" />
+        <br />
+        <h2 class="font-bold text-2xl text-gray-800">Our Approach:</h2>
+        <p class="text-lg leading-relaxed text-slate-500">
+          Customer Satisfaction: <br />Your happiness is our priority, and we
+          strive to exceed your expectations with every project.<br /> Quality Craftsmanship:
+          <br />We take pride in delivering meticulous workmanship that stands
+          the test of time.<br /> Transparent Communication:
+          <br />We keep you informed at every step, ensuring a smooth and
+          stress-free renovation process.
+          <br />Personalized Solutions:<br /> We understand that every home is unique,
+          and we tailor our services to match your vision and requirements. <br
+          />Timely Project Completion: <br />Our efficient team respects your
+          time and ensures projects are completed within agreed-upon deadlines.
+        </p>
+        <br />
+        <h2 class="font-bold text-2xl text-gray-800">Our Commitment:</h2>
+        <p class="text-lg leading-relaxed text-slate-500">
+          Professional Team: <br />Our skilled professionals are dedicated to
+          providing top-quality service with a friendly approach.
+          <br />Reliable and Trustworthy: <br />Count on us to be punctual,
+          dependable, and respectful of your home and property. <br />Lasting
+          Relationships: <br />We aim to build long-term connections with our
+          clients through exceptional service and results. <br />Satisfaction
+          Guarantee: <br />Your satisfaction is our guarantee. We won't rest
+          until you're thrilled with the outcome.<br />
+          Community-Oriented:<br /> We take pride in serving our local community
+          and fostering positive relationships with our neighbors.
+        </p>
+        <br />
+        <a href="/contact"> <Button>Work with us</Button></a>
+      </div>
+      <Licenses />
     </div>
   </Container>
 </Layout>
