--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -19,7 +19,7 @@ const { Content } = await entry.render();
 
 <Layout title={entry.data.title}>
   <Container>
-    <div class="px-5">
+    <div class="px-5 main-page-container">
       <div class="text-center mt-8">
         <a
           href="/projects"
@@ -50,3 +50,22 @@ const { Content } = await entry.render();
     </div>
   </Container>
 </Layout>
+
+<style>
+  body {
+    animation: fadeInAnimation ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+  }
+  @keyframes fadeInAnimation {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+</style>
