--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -27,7 +27,7 @@ import Button from "@components/ui/button.astro";
           workmanship, combined with our dedication to customer satisfaction,
           sets us apart as the go-to choice for all your renovation needs.
         </p>
-        <img class="my-4 rounded" src="../../public/unsplash/k.jpg" />
+        <img class="my-4 rounded" src="/unsplash/k.jpg" />
         <br />
         <h2 class="font-bold text-2xl text-gray-800">Our Approach:</h2>
         <p class="text-lg leading-relaxed text-slate-500">
