--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -37,7 +37,7 @@ const { Content } = await entry.render();
           {entry.data.title}
         </h1>
       </div>
-      <div class="mx-auto prose prose-lg mt-6 max-w-3xl">
+      <div class="mx-auto first-letter:mt-6 max-w-3xl">
         <Content />
       </div>
       <div class="text-center mt-8">
@@ -50,22 +50,3 @@ const { Content } = await entry.render();
     </div>
   </Container>
 </Layout>
-
-<style>
-  body {
-    animation: fadeInAnimation ease 1s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-  }
-  @keyframes fadeInAnimation {
-    0% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-</style>
