fixed error - astro picture component uses sharp and sharp cannot optimize svgs

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -5,34 +5,34 @@ import { Picture } from "@astrojs/image/components";
 
 const features = [
   {
-    img: "/verified-compressed.jpeg",
+    img: "/check-compressed.png",
     title: "100% Recommended",
     description: "Highly rated for Quality, Value, and Customer Service",
     link: false,
   },
   {
-    img: "/verified-compressed.jpeg",
+    img: "/star-compressed.png",
     title: "16 Years in Business",
     link: false,
     description:
       "Proven Industry Workers: Leading the Way in Contracting Services for Over a Decade",
   },
   {
-    img: "/verified-compressed.jpeg",
+    img: "/homeadvisor.png",
     title: "HomeAdvisor Screened and Approved",
     link: false,
     description:
       "California Design Solutions has passed the HomeAdvisor screening process",
   },
   {
-    img: "/verified-compressed.jpeg",
+    img: "/bzscore-compressed.jpeg",
     title: "112 BuildZoom Score",
     link: false,
     description:
       "97th Percentile above other contractors in California. Their BuildZoom score of 112 ranks in the top 3% of 336,931 California licensed contractors",
   },
   {
-    img: "/verified-compressed.jpeg",
+    img: "/paper-compressed.png",
     title: "127 Permitted Projects",
     link: false,
     description:
