--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -13,11 +13,13 @@ import Contactform from "@components/contactform.astro";
     </p>
     <div class="mt-5">
       <div class="flex items-center mt-2 space-x-2 text-gray-600">
-        <span>Address</span>
-      </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
+        <span>Address: <br />3473 Durello Cir, Rancho Cordova, CA 95670</span>
+      </div>
+      <!-- <div class="flex items-center mt-2 space-x-2 text-gray-600">
         <a href="mailto:hello@astroshipstarter.com">Email</a>
-      </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
-        <a href="tel:+1 (987) 4587 899">+1 Phone</a>
+      </div> -->
+      <div class="flex items-center mt-2 space-x-2 text-gray-600">
+        <a href="tel:+1 (916) 612 9218">Phone: <br />+1 916-612-9218</a>
       </div>
     </div>
   </div>
