--- a/src/components/licenses.astro
+++ b/src/components/licenses.astro
@@ -1,5 +1,5 @@
 <div>
-    <div id="licenses" class="p-4 my-4 border bg-slate-100 rounded">
+    <div id="licenses" class="p-4 border bg-slate-100 rounded">
         <h1 class="text-lg text-slate-950 font-bold">License Info</h1>
         <div class="text-slate-700">
             <p>B-General Building Contractor</p>
