--- a/src/components/services.astro
+++ b/src/components/services.astro
@@ -42,43 +42,53 @@ const servicesCollection = [
                 <p class="text-sm leading-relaxed text-slate-600">
                     <ul>
                         <li>
-                            <span class="text-base font-bold text-gray-800"
+                            <span class="font-bold text-xl text-gray-800"
                                 >Additions:</span
                             >
-                            <br />Expand your living space with expertly crafted
-                            additions that seamlessly blend with your home's
-                            existing structure.
+                            <br /><p class="text-sm text-slate-700">
+                                Expand your living space with expertly crafted
+                                additions that seamlessly blend with your home's
+                                existing structure.
+                            </p>
                         </li>
                         <li>
-                            <span class="text-base font-bold text-gray-800"
+                            <span class="text-xl font-bold text-gray-800"
                                 >Kitchen Remodels:</span
                             >
-                            <br />Create a space tailored to your style and
-                            needs, with innovative designs and functional
-                            layouts.
+                            <br /><p class="text-sm text-slate-700">
+                                Create a space tailored to your style and needs,
+                                with innovative designs and functional layouts.
+                            </p>
                         </li>
                         <li>
-                            <span class="text-base font-bold text-gray-800"
+                            <span class="text-xl font-bold text-gray-800"
                                 >Bathroom Renovations:</span
                             >
-                            <br />Transform your bathrooms into luxurious
-                            retreats with our attention to detail and premium
-                            finishes.
+                            <br /><p class="text-sm text-slate-700">
+                                Transform your bathrooms into luxurious retreats
+                                with our attention to detail and premium
+                                finishes.
+                            </p>
                         </li>
                         <li>
-                            <span class="text-base font-bold text-gray-800"
+                            <span class="text-xl font-bold text-gray-800"
                                 >Outdoor Living:</span
                             >
-                            <br /> Enhance your outdoor spaces with stunning patios,
-                            decks, landscaping, and more.
+                            <br />
+                            <p class="text-sm text-slate-700">
+                                Enhance your outdoor spaces with stunning
+                                patios, decks, landscaping, and more.
+                            </p>
                         </li>
                         <li>
-                            <span class="text-base font-bold text-gray-800"
+                            <span class="text-xl font-bold text-gray-800"
                                 >General Home Improvements:</span
                             >
-                            <br />From flooring to roofing, painting to
-                            electrical work, our skilled team covers all aspects
-                            of home improvement.
+                            <br /><p class="text-sm text-slate-700">
+                                From flooring to roofing, painting to electrical
+                                work, our skilled team covers all aspects of
+                                home improvement.
+                            </p>
                         </li>
                     </ul>
                 </p>
