--- a/src/components/review.astro
+++ b/src/components/review.astro
@@ -13,9 +13,9 @@ const {
 
 <hr />
 <div {...rest} class="flex flex-col gap-1 p-4 rounded shadow-sm">
-    <div class="flex justify-between">
-        <div class="flex gap-4">
-            <div class="flex gap-1">
+    <div>
+        <div class="flex gap-4 text-xs md:text-base">
+            <div class="flex gap-1 items-center text-center pr-1">
                 <img src={Star} />
                 {stars}
             </div>
@@ -26,7 +26,7 @@ const {
                 {location}
             </span>
         </div>
-        <span class="text-slate-700">{date}</span>
+        <span class="text-slate-700 my-4">{date}</span>
     </div>
     <div class="text-cyan-500">{title}</div>
     <div class="text-slate-500">{description}</div>
