--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -19,6 +19,7 @@ import Button from "./ui/button.astro";
   <input type="checkbox" class="hidden" style="display:none" name="botcheck" />
   <div class="mb-5">
     <label
+      for="name"
       class="font-semibold inline-block rounded text-slate-600 last:mr-0 mr-1 mb-4"
       >Name</label
     >
@@ -35,6 +36,7 @@ import Button from "./ui/button.astro";
   </div>
   <div class="mb-5">
     <label
+      for="email"
       class="font-semibold inline-block rounded text-slate-600 last:mr-0 mr-1 mb-4"
       >Email</label
     >
@@ -57,6 +59,7 @@ import Button from "./ui/button.astro";
   <!-- phone -->
   <div class="mb-5">
     <label
+      for="phone"
       class="font-semibold inline-block rounded text-slate-600 last:mr-0 mr-1 mb-4"
       >Phone Number</label
     >
@@ -74,6 +77,7 @@ import Button from "./ui/button.astro";
   <!-- date -->
   <div class="mb-5">
     <label
+      for="date"
       class="font-semibold inline-block rounded text-slate-600 last:mr-0 mr-1 mb-4"
       >Preferred Date of Appointment (optional)</label
     >
@@ -90,6 +94,7 @@ import Button from "./ui/button.astro";
   <!-- time -->
   <div class="mb-5">
     <label
+      for="time"
       class="font-semibold inline-block rounded text-slate-600 last:mr-0 mr-1 mb-4"
       >Preferred Time of Appointment (optional)</label
     >
@@ -106,6 +111,7 @@ import Button from "./ui/button.astro";
 
   <div class="mb-3">
     <label
+      for="message"
       class="font-semibold inline-block rounded text-slate-600 last:mr-0 mr-1 mb-4"
       >Tell us about your project</label
     >
