--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ export interface Props {
 const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
 
 const resolvedImageWithDomain = new URL(
-  "/opengraph.jpg",
+  "/opengraph-compressed.jpeg",
   Astro.site
 ).toString();
 
@@ -37,7 +37,7 @@ const makeTitle = title
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <SEO
       title={makeTitle}
-      description="California Design Solutions ios a Home Improvement and Renovation contractor"
+      description="California Design Solutions is a Sacramento Home Improvement and Renovation Contractor"
       canonical={canonicalURL}
       openGraph={{
         basic: {
