changed hero text to say services instead of contractor and added items-center to reviews

--- a/src/components/review.astro
+++ b/src/components/review.astro
@@ -14,7 +14,7 @@ const {
 <hr />
 <div {...rest} class="flex flex-col gap-1 p-4 rounded shadow-sm">
     <div>
-        <div class="flex gap-4 text-xs md:text-base">
+        <div class="flex gap-4 text-xs md:text-base items-center">
             <div class="flex gap-1 items-center text-center pr-1">
                 <img src={Star} />
                 {stars}
