fixed button contrast

--- a/src/components/services.astro
+++ b/src/components/services.astro
@@ -107,7 +107,7 @@ const servicesCollection = [
         </div>
         <div class="my-16 flex w-full items-center justify-center">
             <a
-                class="text-lg leading-relaxed text-slate-500 border w-fit px-8 bg-slate-100 rounded"
+                class="text-base leading-relaxed text-slate-900 border w-fit px-8 py-2 bg-slate-100 rounded"
                 href="/projects">View All Projects</a
             >
         </div>
