--- a/src/components/testimonials.astro
+++ b/src/components/testimonials.astro
@@ -36,8 +36,8 @@ const reviews = [
       class="flex flex-col gap-3 mx-auto max-w-4xl mt-8 text-center items-center justify-center">
       <h2 class="font-bold text-3xl text-gray-800">Customer Testimonials</h2>
       <a
-        class="text-lg leading-relaxed text-slate-500 border px-8 bg-slate-100 rounded"
-        href="/reviews">View All Reviews</a
+        class="text-base leading-relaxed text-slate-900 border px-8 py-2 bg-slate-100 rounded"
+        href="/reviews">See All Reviews</a
       >
     </div>
     <div class="mt-12">
