--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -26,7 +26,7 @@ const styles = {
   outline:
     "bg-transparent border-2 border-white-800 hover:bg-gray-400 hover:bg-opacity-50 text-white ",
   primary:
-    "bg-gray-900 text-white hover:bg-gray-800  border-2 border-transparent",
+    "bg-zinc-950 text-white hover:bg-gray-800 border-2 border-transparent",
   inverted: "bg-white text-gray-800  border-2 border-transparent",
   muted: "bg-gray-100 hover:bg-gray-200   border-2 border-transparent",
 };
